--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+*{
+  font-family: montserrat;
+}
+body{
+  background: #0d6efd;
+  margin: 0rem 2rem;
+}
+.section-padding{
+  padding: 10px 0;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+p{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* navbar */
+.navbar-nav a{
+  
+  font-size: 20px;
+  font-weight: 500px;
+  color:#5D8AA8;
+}
+.navbar-light .navbar-brand{
+  color:#7DF9FF;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+.navbar-light .navbar-brand:focus,
+.navbar-light .navbar-brand:hover{
+  color: #000;
+}
+.navbar-light .navbar-link .navbar-nav{
+  color: #7DF9FF;
+}
+@media only screen and (max-width:767px) {
+  .navbar-nav{
+      text-align: center;
+  }
+  .navbar-nav a{
+  
+    font-size: 15px;
+    font-weight: 500px;
+    color:#5D8AA8;
+  }
+}
+.converter {
+  margin-top: 20%;
+  margin-left: 20%;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-converter {
+  /* margin: 1rem; */
+  padding-left: 1rem;
+  display: flex;
+  gap: 3rem;
+}
+.neutral{
+  padding-top: 100%;
+}
+.d-grid{
+  margin-top: 3rem;
+  margin-right: 30%;
 }
